# RLpower

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
configs/control/: pid_gains.yaml
configs/curriculum/: curriculum.yaml
configs/deployment/: deploy.yaml
configs/environment/: env.yaml
configs/fmu/: fmu_export.yaml
configs/model/: base_cycle.yaml
configs/safety/: constraints.yaml
configs/surrogate/: fno_surrogate.yaml
configs/training/: finetune_fmu.yaml  ppo_fmu.yaml
data/: combined_results_for_paper.json  control_analysis_all_phases.json  control_analysis_mlp_phases.json  control_analysis_phase0.json  cross_validation_212k.json  cross_validation_final_5M.json  cross_validation_interleaved.json  cross_validation_zn_pid_20ep.json  evaluation_report.json  mlp_ppo_results.json  skrl_ppo_results.json  skrl_ppo_results_DEPRECATED.md  surrogate_fidelity_report.json  surrogate_fidelity_report_v2.json  thermo_state_tables.json
docs/: sco2rl_presentation.md
memories/: stage0_memory.md  stage2_memory.md  stage5_memory.md
notebooks/: 01_cycle_analysis.ipynb  02_reward_shaping.ipynb  03_surrogate_validation.ipynb  04_policy_evaluation.ipynb  05_control_analysis.ipynb
paper/: IMPLEMENTATION_PLAN.md  Makefile  generate_figures.py  main.tex  plot_thermo_trajectories.py  plot_training_curve.py  sco2rl.bib  sec_abstract.tex  sec_appendix.tex  sec_architecture.tex  sec_bugs.tex  sec_conclusion.tex  sec_control_analysis.tex  sec_intro.tex  sec_method.tex  sec_related.tex  sec_results.tex
scripts/: collect_trajectories.py  cross_validate_and_export.py  evaluate_pid_baseline.py  export_controlled_fmu.py  fidelity_report_fmu.py  finetune_fmu.py  generate_architecture_diagrams.py  generate_cycle_diagram.py  generate_scenario_ts_diagrams.py  generate_thermo_tables.py  launch_fno_training.sh  monitor_fmu_training.py  myprops_stub.c  preflight_check.py  preflight_surrogate.py  regenerate_all_figures.py  run_control_analysis.py  run_control_analysis_mlp.py  run_parallel_training.py  train_fmu.py  train_mlp_surrogate.py  train_ppo_mlp.py  train_ppo_standalone.py  train_surrogate.py  tune_pid.py  tune_pid_baseline.py  verify_environment.py
src/sco2rl/: __init__.py
src/sco2rl/analysis/: __init__.py  _dynamic_mock.py  frequency_analysis.py  metrics.py  scenario_runner.py  step_response.py
src/sco2rl/control/: __init__.py  interfaces.py  multi_loop_pid.py  pid.py  rl_controller.py
src/sco2rl/curriculum/: __init__.py  metrics_observer.py  phase.py  scheduler.py
src/sco2rl/deployment/: __init__.py
src/sco2rl/environment/: __init__.py  sco2_env.py
src/sco2rl/physics/: __init__.py
src/sco2rl/scripts/: __init__.py  _runner.py  build_fmu.py  collect_trajectories.py  export_policy.py  finetune_fmu.py  run_control_analysis.py  train_fmu.py  train_surrogate.py  tune_pid.py  verify_environment.py
src/sco2rl/simulation/: __init__.py
src/sco2rl/surrogate/: __init__.py  batched_env.py  fidelity_gate.py  fno_model.py  lhs_sampler.py  surrogate_env.py  surrogate_trainer.py  trajectory_collector.py  trajectory_dataset.py
src/sco2rl/training/: __init__.py  checkpoint_bridge.py  checkpoint_manager.py  cross_validator.py  curriculum_callback.py  fine_tuner.py  fmu_trainer.py  lagrangian_ppo.py  policy_evaluator.py
src/sco2rl/utils/: __init__.py  config.py  logging.py  seeds.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_failfast_and_orchestration_scripts.py  test_fmpy_adapter_real_fmu.py
tests/property/: __init__.py  test_action_clipping.py  test_constraint_satisfaction.py  test_obs_bounds.py  test_reward_monotonicity.py
tests/regression/: __init__.py  test_mock_fmu_regression.py  test_policy_kpis_regression.py
tests/regression/golden/: mock_fmu_step.json  policy_kpis_phase0.json
tests/unit/: __init__.py  test_config_loader.py  test_logging.py  test_seeds.py
tests/unit/analysis/: test_frequency_analysis.py  test_step_response.py
tests/unit/control/: test_pid.py  test_rl_controller.py
tests/unit/curriculum/: __init__.py  test_curriculum.py
tests/unit/deployment/: test_evaluation_reporter.py  test_pid_baseline.py
(+61 files in other folders)
